--- a/homePage.html
+++ b/homePage.html
@@ -29,8 +29,8 @@
                     <span> Menu </span>
                 </div>
                 <ul id="navItems">
-                    <li><a href="#"> about </a></li>
-                    <li><a href="#"> overview </a></li>
+                    <li><a href=""> about </a></li>
+                    <li><a href="/overviewPage.html"> overview </a></li>
                     <li><a href="#"> locations </a></li>
                     <li><a href="#"> reserve </a></li>
                     <li><a href="#"> rooms </a></li>
