--- a/overviewPage.html
+++ b/overviewPage.html
@@ -46,7 +46,7 @@
     <section class="welcomeSection">
         <div id="videoBackground">
             <video autoplay muted loop id="myVideo">
-                <source src="assets/videos/luxurious_hotels_short.mp4" type="video/mp4">
+                <source src="https://storage.googleapis.com/media_hotel_website/luxurious_hotels_short.mp4" type="video/mp4">
             </video>
         </div>
         <div id="headingText">
